# diplome_work

./: .gitignore  base.html  db.sqlite3  manage.py  pyproject.toml
core/: context_processors.py  models.py  settings.py  urls.py
posts/: admin.py  cms_plugins_register.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_postcontentextension.py  0002_textbesidetheimage.py  0003_alter_review_date.py  0003_mytextpluginmodel.py  0004_reviewplugin_title.py  0005_embeddedvideo.py  0006_galleryimage.py  0007_link.py  0008_linkitem_remove_link_link_remove_link_text_and_more.py  0009_remove_link_links_remove_link_title_linkitem_plugin.py
posts/templatetags/: language_tags.py
static/emtc.great-site.net/: AboutUs.html  Gallery.html  Year2023.html
static/styles/: gallery_plugin.css
staticfiles/emtc.great-site.net/: Feedback.html  Partners.html  Year2022.html  Year2023.html
templates/: 404.html  base.html  carousel_slide.html  feedback.html  feedbacks.html  gallery.html  idk.html  main.html  minimal.html  my_text_plugin.html  partners.html  text_section_plugin.html  text_with_picture.html  year2022.html  year2023.html
templates/en/: 404.html  base.html  feedback.html  gallery.html  main.html  partners.html  year2022.html  year2023.html
templates/menu/: menu.html
templates/plugins/: content_section.html  embeded_video_plugin.html  feedbacks.html  gallery_image_plugin.html  gallery_plugin_container.html  gallery_plugin_element.html  link.html  photo_carousel.html  picture.html  picture_text.html  text_between_2_pictures.html  text_picture.html
(+128 files in other folders)
